Crash at Drag&Dropping name on Object Data tab #56643

Closed
opened 2018-09-01 15:00:41 +02:00 by Javier Elias Barrón López · 3 comments

Blender 2.8 crashes when dragging the object's name on top of the datablock's name at the object's data tab.

  1. Open a new file
  2. Select the default cube
  3. At the properties panel, switch to the object's data tab
  4. Drag and Drop the object's name on to the data
    CRASH

The /tmp/blender.crash.txt has:

Blender 2.80 (sub 21), Commit date: 2018-08-31 20:43, Hash a5f950ed38

bpy.context.space_data.context = 'OBJECT' # Property

backtrace

./blender(BLI_system_backtrace+0x1d) [0x1b4d62d]
./blender() [0x1137e09]
/lib/x86_64-linux-gnu/libc.so.6(+0x3ef20) [0x7f573057ef20]
./blender(BLI_strncpy_utf8+0x5) [0x1b4bc65]
./blender() [0x12f89e8]
./blender() [0x12fb526]
./blender() [0x12fbea1]
./blender() [0x114019b]
./blender() [0x1140a0c]
./blender(wm_event_do_handlers+0x40c) [0x114118c]
./blender(WM_main+0x20) [0x11387b0]
./blender(main+0x327) [0x109ec27]
/lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xe7) [0x7f5730561b97]
./blender(_start+0x2a) [0x1134a0a]

Thanks for your hard work

Blender 2.8 crashes when dragging the object's name on top of the datablock's name at the object's data tab. 1. Open a new file 2. Select the default cube 3. At the properties panel, switch to the object's data tab 4. Drag and Drop the object's name on to the data CRASH The /tmp/blender.crash.txt has: > # Blender 2.80 (sub 21), Commit date: 2018-08-31 20:43, Hash a5f950ed381 > bpy.context.space_data.context = 'OBJECT' # Property > > # backtrace > ./blender(BLI_system_backtrace+0x1d) [0x1b4d62d] > ./blender() [0x1137e09] > /lib/x86_64-linux-gnu/libc.so.6(+0x3ef20) [0x7f573057ef20] > ./blender(BLI_strncpy_utf8+0x5) [0x1b4bc65] > ./blender() [0x12f89e8] > ./blender() [0x12fb526] > ./blender() [0x12fbea1] > ./blender() [0x114019b] > ./blender() [0x1140a0c] > ./blender(wm_event_do_handlers+0x40c) [0x114118c] > ./blender(WM_main+0x20) [0x11387b0] > ./blender(main+0x327) [0x109ec27] > /lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xe7) [0x7f5730561b97] > ./blender(_start+0x2a) [0x1134a0a] > Thanks for your hard work

Added subscriber: @JBarron

Added subscriber: @JBarron

This issue was referenced by 90ea5c543a

This issue was referenced by 90ea5c543aa7e091ae21aac6b8d87c97c3aa0464

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56643
No description provided.