Fix T56643: crash drag & dropping ID onto a text field.